# fomocafe

./: .gitignore  pyproject.toml  ruff.toml
fomocafe/: app.py  config.py  db.py  models.py
fomocafe/blueprints/: __init__.py  api.py
