[tool.poetry]
name = "fomocafe"
version = "0.1.0"
description = ""
authors = ["Edbert Wijaya Irawan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
fire = "^0.7.0"
pydantic = "^2.10.3"
shortuuid = "^1.0.13"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
